# PowerSubstationMonitoring

./: .clang-format  CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appsettings.cpp  appsettings.h  diagramlinkitem.cpp  diagramlinkitem.h  diagramnodeitem.cpp  diagramnodeitem.h  diagramtheme.cpp  diagramtheme.h  equipment.cpp  equipment.h  equipmenttreemodel.cpp  equipmenttreemodel.h  eventlogger.cpp  eventlogger.h  historypersistence.cpp  historypersistence.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitoringchart.cpp  monitoringchart.h  powerflowcalculator.cpp  powerflowcalculator.h  reportdialog.cpp  reportdialog.h  reportdialog.ui  resources.qrc  sensortelemetry.cpp  sensortelemetry.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  substationdiagramview.cpp  (+9 more)
data/: substation_layout.json  substation_layout_compact.json  substation_layout_ring.json
ts/: app_uk.ts
